--- a/profil.html
+++ b/profil.html
@@ -5,5 +5,17 @@
 </head>
 <body>
 
+	<div class="container">
+        <div class="row">
+        	<h1>Vous etes Moussa Diop </h1>
+        </div>
+
+        <div class="row">
+          
+          <h1>vous avez 21 ans </h1>
+        </div>
+
+	</div>
+
 </body>
 </html>
