le commit du deuxieme dev

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 
 	<h2>Bienvenue dans le jeux le plus connu aux monde !!!! </h2>
 	<p>Bonne chance </p>
+	<form>
+		<div class="form-group">
+             <label>Nom</label>
+             <input />
+		</div>
+
+		<div class="form-group">
+            <label>Prenom</label>
+             <input />
+
+		</div>
+
+	</form>
 
 </body>
 </html>
